<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTop"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/view_top"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineBot"
        android:background="@drawable/view_bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:background="@drawable/bg_box"
        android:elevation="@dimen/_24sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_16sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:gravity="center"
            android:textColor="@color/color_view"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/bg_input"
            android:padding="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/bg_input"
            android:padding="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"/>

            <TextView
                android:id="@+id/tvForgetPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textStyle="bold"
                android:text="@string/forget_password"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:text="@string/login"
            android:layout_marginVertical="@dimen/_16sdp"/>

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_account"
                android:textSize="@dimen/_16sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="@dimen/_16sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:textColor="@color/color_view"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_later"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/color_grey"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>