<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTop"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/view_top"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineBot"
        android:background="@drawable/view_bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:background="@drawable/bg_box"
        android:elevation="@dimen/_24sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_16sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/account_information"
            android:textColor="@color/color_view"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/bg_input"
            android:padding="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"/>

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/bg_input"
            android:padding="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"/>


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/bg_input"
            android:padding="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"/>


        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/bg_input"
            android:padding="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"/>

        <Button
            android:id="@+id/btnChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:layout_marginVertical="@dimen/_8sdp"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:text="@string/go_to_back"
            android:textColor="@color/white"
            android:layout_marginVertical="@dimen/_8sdp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>