<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_bg"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quality"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/bg_box"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/bg_box"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_box_view"
            android:elevation="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_box_view"
            android:elevation="@dimen/_8sdp"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>